# safe-fs-tools

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs  policy.example.toml
.github/workflows/: ci.yml  docs.yml  perf-safety.yml  release.yml  secrets-secondary.yml
benches/: perf_ops.rs
cli/: Cargo.toml
cli/src/: command_exec.rs  error.rs  input.rs  main.rs  tests.rs
docs/: cli-reference.md  concepts.md  db-vfs.md  deployment-and-ops.md  example-survey.md  faq.md  getting-started.md  index.md  library-reference.md  operations-reference.md  ops-runbook-secrets.md  policy-reference.md  release-notes-risk-boundary-2026h1.md  secrets-gate.md  security-guide.md
githooks/: commit-msg  pre-commit
openspec/changes/agent-safety-priority-2026h1/: proposal.md
openspec/changes/risk-boundary-delivery-plan-2026h1/: proposal.md  tasks.md
openspec/changes/risk-boundary-manual-one-by-one-2026h1/: proposal.md
scripts/: gate.sh  setup-githooks.sh
security/secrets/: README.md
src/: error.rs  lib.rs  main.rs  ops.rs  path_utils.rs  platform_open.rs  policy.rs  policy_io.rs  redaction.rs
src/ops/: context.rs  copy_file.rs  delete.rs  delete_path.rs  edit.rs  git_permissions.rs  glob.rs  grep.rs  grep_tests.rs  io.rs  list_dir.rs  mkdir.rs  mod.rs  move_path.rs  patch.rs  path_validation.rs  read.rs  resolve.rs  stat.rs  tests.rs  traversal.rs  write.rs
src/ops/resolve/: dir_ops.rs
src/ops/traversal/: compile.rs  walk.rs
src/platform/: mod.rs  rename.rs  unix_metadata.rs  windows_path_compare.rs
tests/: basic.rs  delete.rs  edit_patch.rs  git_permissions.rs  glob.rs  grep.rs  grep_non_utf8.rs  grep_symlink_dir.rs  new_ops.rs  new_ops_runtime_cap.rs  performance.rs  permissions.rs  policy.rs  policy_io.rs  read.rs  secrets.rs  traversal.rs  windows.rs
tests/common/: mod.rs  unix_helpers.rs
tests/new_ops/: deny_and_delete.rs
tests/permissions/: root_not_found.rs
