[package]
name = "safe-fs-tools"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive"] }
diffy = "0.4"
globset = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
