[package]
name = "safe-fs-tools"
version = "0.2.0"
edition = "2024"
rust-version = "1.92"
description = "Safe filesystem tools (read/glob/grep/edit/patch/delete) with explicit sandbox policy."
readme = "README.md"
publish = false

[workspace]
resolver = "2"
members = ["cli"]

[dependencies]
diffy = { version = "0.4", optional = true }
globset = "0.4"
memchr = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"
toml = { version = "0.8", optional = true }
serde_json = { version = "1", optional = true }
walkdir = { version = "2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json = "1"

[features]
default = ["glob", "grep", "patch"]
glob = ["dep:walkdir"]
grep = ["dep:walkdir"]
patch = ["dep:diffy"]
policy-io = ["dep:toml", "dep:serde_json"]
