[package]
name = "safe-fs-tools-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "CLI for safe-fs-tools (safe filesystem operations with explicit sandbox policy)."
publish = false

[[bin]]
name = "safe-fs-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
safe-fs-tools = { path = "..", version = "0.1.0", default-features = false, features = ["glob", "grep", "patch", "policy-io"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
walkdir = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
